Handle reservation Logic
