# app/serializers/reservation_serializer.rb
@@ -21,8 +21,7 @@
 #
 #  fk_rails_...  (room_id => rooms.id)
 #
-require 'rails_helper'
-
-RSpec.describe Reservation, type: :model do
-  pending "add some examples to (or delete) #{__FILE__}"
+class ReservationSerializer
+  include JSONAPI::Serializer
+  attributes :id, :start_date, :end_date, :room_id
 end
