# db/schema.rb
@@ -10,7 +10,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema[7.0].define(version: 2023_10_21_172927) do
+ActiveRecord::Schema[7.0].define(version: 2023_10_21_192121) do
   # These are extensions that must be enabled in order to support this database
   enable_extension "plpgsql"
 
@@ -18,10 +18,11 @@ ActiveRecord::Schema[7.0].define(version: 2023_10_21_172927) do
     t.bigint "room_id", null: false
     t.date "start_date"
     t.date "end_date"
-    t.integer "status"
+    t.integer "status", default: 0
     t.datetime "created_at", null: false
     t.datetime "updated_at", null: false
     t.decimal "amount", default: "0.0"
+    t.integer "guests_count"
     t.index ["room_id"], name: "index_reservations_on_room_id"
     t.index ["start_date", "end_date"], name: "index_reservations_on_start_date_and_end_date"
   end
