# swagger/v1/swagger.yaml
@@ -145,7 +145,7 @@
             "in": "query",
             "type": "string",
             "required": true,
-            "example": "Rh1A8Lfic6q"
+            "example": "qWzBB4IiLBzJ"
           }
         ],
         "responses": {
@@ -287,6 +287,345 @@
           },
           "422": {
             "description": "Failed"
+          }
+        }
+      }
+    },
+    "/api/v1/reservation": {
+      "post": {
+        "summary": "create reservation",
+        "tags": [
+          "reservation"
+        ],
+        "consumes": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "header",
+            "type": "string",
+            "name": "Authorization",
+            "required": true,
+            "description": "user Barer token"
+          },
+          {
+            "name": "reservation",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "reservation": {
+                  "type": "object",
+                  "description": "user mail ",
+                  "properties": {
+                    "room_id": {
+                      "type": "integer",
+                      "description": "",
+                      "example": "room id"
+                    },
+                    "guests_count": {
+                      "type": "integer",
+                      "description": "guests count",
+                      "example": 2
+                    },
+                    "end_date": {
+                      "type": "string",
+                      "description": "capacity count guests",
+                      "example": "2022-10-10"
+                    },
+                    "start_date": {
+                      "type": "string",
+                      "example": "2022-10-1"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "reservation Success",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "id": {
+                  "type": "integer"
+                },
+                "attributes": {
+                  "type": "hash"
+                }
+              },
+              "required": [
+                "id",
+                "attributes"
+              ]
+            }
+          },
+          "401": {
+            "description": "reservation Failed"
+          }
+        }
+      },
+      "get": {
+        "summary": "list of rooms",
+        "tags": [
+          "reservation"
+        ],
+        "consumes": [
+          "application/json",
+          "application/xml"
+        ],
+        "parameters": [
+          {
+            "name": "per_page",
+            "in": "query",
+            "type": "string",
+            "required": false,
+            "example": 10
+          },
+          {
+            "name": "page",
+            "in": "query",
+            "type": "string",
+            "required": true,
+            "example": 1
+          },
+          {
+            "name": "start_date",
+            "in": "query",
+            "type": "integer",
+            "required": false,
+            "example": 1
+          },
+          {
+            "name": "end_date",
+            "in": "query",
+            "type": "integer",
+            "required": false,
+            "example": 5
+          },
+          {
+            "in": "header",
+            "type": "string",
+            "name": "Authorization",
+            "required": true,
+            "description": "user Barer token"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Room Success"
+          }
+        }
+      }
+    },
+    "/api/v1/room": {
+      "post": {
+        "summary": "create room",
+        "tags": [
+          "rooms"
+        ],
+        "consumes": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "header",
+            "type": "string",
+            "name": "Authorization",
+            "required": true,
+            "description": "user Barer token"
+          },
+          {
+            "name": "room",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "room": {
+                  "type": "object",
+                  "description": "user mail ",
+                  "properties": {
+                    "description": {
+                      "type": "string",
+                      "description": "",
+                      "example": "details for room"
+                    },
+                    "price": {
+                      "type": "decimal",
+                      "description": "price room",
+                      "example": 20
+                    },
+                    "capacity": {
+                      "type": "integer",
+                      "description": "capacity count guests",
+                      "example": 3
+                    },
+                    "room_type_id": {
+                      "type": "integer",
+                      "example": 1
+                    }
+                  }
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Login Success",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "id": {
+                  "type": "integer"
+                },
+                "attributes": {
+                  "type": "hash"
+                }
+              },
+              "required": [
+                "id",
+                "attributes"
+              ]
+            }
+          },
+          "401": {
+            "description": "Login Failed"
+          }
+        }
+      },
+      "get": {
+        "summary": "list of rooms",
+        "tags": [
+          "rooms"
+        ],
+        "consumes": [
+          "application/json",
+          "application/xml"
+        ],
+        "parameters": [
+          {
+            "name": "per_page",
+            "in": "query",
+            "type": "string",
+            "required": false,
+            "example": 10
+          },
+          {
+            "name": "page",
+            "in": "query",
+            "type": "string",
+            "required": true,
+            "example": 1
+          },
+          {
+            "name": "price_gt",
+            "in": "query",
+            "type": "integer",
+            "required": false,
+            "example": 1
+          },
+          {
+            "name": "price_less",
+            "in": "query",
+            "type": "integer",
+            "required": false,
+            "example": 5
+          },
+          {
+            "name": "room_type_id",
+            "in": "query",
+            "type": "integer",
+            "required": false
+          },
+          {
+            "in": "header",
+            "type": "string",
+            "name": "Authorization",
+            "required": true,
+            "description": "user Barer token"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Room Success"
+          }
+        }
+      }
+    },
+    "/api/v1/room/{id}": {
+      "get": {
+        "summary": "get room info",
+        "tags": [
+          "rooms"
+        ],
+        "consumes": [
+          "application/json",
+          "application/xml"
+        ],
+        "parameters": [
+          {
+            "in": "header",
+            "type": "string",
+            "name": "Authorization",
+            "required": true,
+            "description": "user Barer token"
+          },
+          {
+            "name": "id",
+            "in": "path",
+            "type": "integer",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "room Success"
+          },
+          "404": {
+            "description": "room Not Found"
+          }
+        }
+      }
+    },
+    "/api/v1/room_type": {
+      "get": {
+        "summary": "list of rooms",
+        "tags": [
+          "rooms"
+        ],
+        "consumes": [
+          "application/json",
+          "application/xml"
+        ],
+        "parameters": [
+          {
+            "name": "per_page",
+            "in": "query",
+            "type": "string",
+            "required": false,
+            "example": 10
+          },
+          {
+            "name": "page",
+            "in": "query",
+            "type": "string",
+            "required": true,
+            "example": 1
+          },
+          {
+            "in": "header",
+            "type": "string",
+            "name": "Authorization",
+            "required": true,
+            "description": "user Barer token"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Room Success"
           }
         }
       }
